[package]
name = "line-bot-sdk-rust-openapi"
version = "1.0.0"
authors = ["nanato12 <admin@okj.info>"]
edition = "2021"
description = "LINE Messaging API SDK for Rust"
readme = "README.md"
repository = "https://github.com/nanato12/line-bot-sdk-rust/"
license-file = "LICENSE"
keywords = ["line", "linebot", "line-bot-sdk", "line-messaging-api"]
categories = ["api-bindings"]

[features]
default = []
rocket_support = ["rocket"]
actix_support = ["actix-web"]

[dependencies]
actix-web = { version = "4.4.0", optional = true, default-features = false }
base64 = "0.21.5"
hmac = "0.12.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = "3.4.0"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[[example]]
name = "echobot_actix_web"
required-features = ["actix_support"]

[[example]]
name = "echobot_rocket"
required-features = ["rocket_support"]

[[example]]
name = "source_rocket"
required-features = ["rocket_support"]

[[example]]
name = "various_messages_rocket"
required-features = ["rocket_support"]

[workspace]
members = ["generator"]
