[package]
name = "line-bot-sdk-rust"
version = "1.0.0"
authors = ["nanato12 <admin@okj.info>"]
edition = "2021"
description = "LINE Messaging API SDK for Rust"
readme = "README.md"
repository = "https://github.com/nanato12/line-bot-sdk-rust/"
license-file = "LICENSE"
keywords = ["line", "linebot", "line-bot-sdk", "line-messaging-api"]
categories = ["api-bindings"]

[features]
default = []
rocket_support = ["rocket"]
actix_support = ["actix-web"]

[dependencies]
actix-web = { version = "4.4.0", optional = true, default-features = false }
base64 = "0.21.5"
hmac = "0.12.1"
rocket = { version = "0.5.0", optional = true, default-features = false }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_with = "3.4.0"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
dotenv = "0.15.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
rocket = { version = "0.5.0", features = ["json", "msgpack", "uuid"] }

[workspace]
members = ["generator"]

[[example]]
name = "actix-sample"
required-features = ["actix_support"]

[[example]]
name = "rocket-sample"
required-features = ["rocket_support"]
