[workspace]
resolver = "2"
members = [
    "generator",
    "core/line_channel_access_token",
    "core/line_insight",
    "core/lib/",
    "core/line_liff",
    "core/line_manage_audience",
    "core/line_membership",
    "core/line_messaging_api",
    "core/line_module",
    "core/line_module_attach",
    "core/line_shop",
    "core/line_webhook",
]
