[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
dotenv = "0.15.0"
line-bot-sdk-rust-openapi = { path = "../openapi" }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
