[package]
name = "line-bot-sdk-rust"
version = "1.0.0"
authors = ["nanato12 <admin@okj.info>"]
edition = "2021"
description = "LINE Messaging API SDK for Rust"
readme = "../../README.md"
repository = "https://github.com/nanato12/line-bot-sdk-rust/"
license-file = "../../LICENSE"
keywords = ["line", "linebot", "line-bot-sdk", "line-messaging-api"]
categories = ["api-bindings"]

[features]
default = []
rocket_support = ["rocket"]
actix_support = ["actix-web"]

[dependencies]
base64 = "0.21.5"
hmac = "0.12.1"
sha2 = "0.10.8"
hyper = { version = "~0.14", features = ["full"] }
hyper-rustls = "0.24.2"

[dependencies.rocket]
version = "0.5.0"
optional = true
default-features = false

[dependencies.actix-web]
version = "4.4.0"
optional = true
default-features = false

[dependencies.channel_access_token]
version = "0.0.1"
path = "../channel_access_token"

[dependencies.insight]
version = "0.0.1"
path = "../insight"

[dependencies.liff]
version = "1.0.0"
path = "../liff"

[dependencies.manage_audience]
version = "0.0.1"
path = "../manage_audience"

[dependencies.messaging_api]
version = "0.0.1"
path = "../messaging_api"

[dependencies.module]
version = "0.0.1"
path = "../module"

[dependencies.module_attach]
version = "0.0.1"
path = "../module_attach"

[dependencies.shop]
version = "0.0.1"
path = "../shop"

[dependencies.webhook]
version = "1.0.0"
path = "../webhook"
