[package]
name = "line-bot-sdk-rust"
version = "1.0.0"
authors = ["nanato12 <admin@okj.info>"]
edition = "2021"
description = "LINE Messaging API SDK for Rust"
readme = "../../README.md"
repository = "https://github.com/nanato12/line-bot-sdk-rust/"
license = "Apache-2.0"
keywords = ["line", "linebot", "line-bot-sdk", "line-messaging-api"]
categories = ["api-bindings"]

[features]
default = []
rocket_support = ["rocket"]
actix_support = ["actix-web"]

[dependencies]
base64 = "0.21.5"
hmac = "0.12.1"
sha2 = "0.10.8"
hyper = { version = "~0.14", features = ["full"] }
hyper-rustls = "0.24.2"

[dependencies.rocket]
version = "0.5.0"
optional = true
default-features = false

[dependencies.actix-web]
version = "4.4.0"
optional = true
default-features = false

[dependencies.line_channel_access_token]
version = "0.0.1"
path = "../line_channel_access_token"

[dependencies.line_insight]
version = "0.0.1"
path = "../line_insight"

[dependencies.line_liff]
version = "1.0.0"
path = "../line_liff"

[dependencies.line_manage_audience]
version = "0.0.1"
path = "../line_manage_audience"

[dependencies.line_messaging_api]
version = "0.0.1"
path = "../line_messaging_api"

[dependencies.line_module]
version = "0.0.1"
path = "../line_module"

[dependencies.line_module_attach]
version = "0.0.1"
path = "../line_module_attach"

[dependencies.line_shop]
version = "0.0.1"
path = "../line_shop"

[dependencies.line_webhook]
version = "1.0.0"
path = "../line_webhook"
